--- a/src/scss/options-screen.scss
+++ b/src/scss/options-screen.scss
@@ -61,6 +61,7 @@ input[type='image']:focus{
 p {
     margin: auto;
     clear: both;
+    margin-right: 16px;
 }
 
 #date {
@@ -72,24 +73,27 @@ p {
 }
 
 #time {
-    font-size: 53px;
     font-weight: bold;
     color: #F1F1F1;
-    letter-spacing: 3.18px;
     float: right;
 }
 
+.options-time {
+  font-size: 53px;
+  letter-spacing: 3.18px;
+}
 
-h2 {
+#didumean {
     font-size: 50px;
     font-weight: bold;
     letter-spacing: 3px;
     color: #F1F1F1;
-    margin: 25px 0;
+    margin: 25px 15px;
 }
 
 hr.divider {
     border: 1px solid #05818A;
+    margin: 0 16px;
 }
 
 
@@ -211,5 +215,5 @@ hr.divider {
     .options-screen { padding: 1.5rem 1.5rem; } /* Reduce the container width */
     #date {font-size: 20px; margin-top: 16px;} 
     #time { font-size: 30px;}
-    h2 { font-size: 40px; margin: 16px 0;}
+    #didumean { font-size: 40px; margin: 16px 15px;}
   }
